[gd_scene load_steps=5 format=2]

[ext_resource path="res://TabScreens/Shipyard/ShipButton.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Fonts/Ubuntu-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 7
use_mipmaps = true
use_filter = true
font_data = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.870588, 0.537255, 0, 1 )
corner_detail = 5

[node name="ShipButton" type="Button"]
margin_right = 250.0
margin_bottom = 75.0
rect_min_size = Vector2( 60, 90 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 12
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainVBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 238.0
margin_bottom = 88.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MainVBoxContainer"]
margin_right = 236.0
margin_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShipModel" type="Label" parent="MarginContainer/MainVBoxContainer/HBoxContainer"]
margin_right = 70.0
margin_bottom = 68.0
rect_min_size = Vector2( 70, 0 )
size_flags_vertical = 7
text = "Ship Type"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MainVBoxContainer/HBoxContainer"]
margin_left = 74.0
margin_right = 236.0
margin_bottom = 68.0
size_flags_horizontal = 3

[node name="HullBarContainer" type="HBoxContainer" parent="MarginContainer/MainVBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 162.0
margin_bottom = 9.0

[node name="HullBarLabel" type="Label" parent="MarginContainer/MainVBoxContainer/HBoxContainer/VBoxContainer/HullBarContainer"]
margin_right = 14.0
margin_bottom = 9.0
rect_min_size = Vector2( 14, 0 )
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "H"
align = 1

[node name="HullBarProgress" type="ProgressBar" parent="MarginContainer/MainVBoxContainer/HBoxContainer/VBoxContainer/HullBarContainer"]
margin_left = 18.0
margin_right = 162.0
margin_bottom = 9.0
rect_min_size = Vector2( 0, 7 )
hint_tooltip = "Hull strength"
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/fg = SubResource( 3 )
max_value = 10000.0
value = 1500.0
percent_visible = false

[node name="ShieldsBarContainer" type="HBoxContainer" parent="MarginContainer/MainVBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 13.0
margin_right = 162.0
margin_bottom = 22.0

[node name="ShieldsBarLabel" type="Label" parent="MarginContainer/MainVBoxContainer/HBoxContainer/VBoxContainer/ShieldsBarContainer"]
margin_right = 14.0
margin_bottom = 9.0
rect_min_size = Vector2( 14, 0 )
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0.564706, 0.909804, 1 )
text = "S"
align = 1

[node name="ShieldslBarProgress" type="ProgressBar" parent="MarginContainer/MainVBoxContainer/HBoxContainer/VBoxContainer/ShieldsBarContainer"]
margin_left = 18.0
margin_right = 162.0
margin_bottom = 9.0
rect_min_size = Vector2( 0, 7 )
hint_tooltip = "Shields strength (MJ)"
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/fg = SubResource( 3 )
max_value = 10000.0
value = 1000.0
percent_visible = false

[node name="ThrustBarContainer" type="HBoxContainer" parent="MarginContainer/MainVBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 162.0
margin_bottom = 35.0

[node name="ThrustBarLabel" type="Label" parent="MarginContainer/MainVBoxContainer/HBoxContainer/VBoxContainer/ThrustBarContainer"]
margin_right = 14.0
margin_bottom = 9.0
rect_min_size = Vector2( 14, 0 )
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.85098, 0.827451, 0.705882, 1 )
text = "T"
align = 1

[node name="ThrustBarProgress" type="ProgressBar" parent="MarginContainer/MainVBoxContainer/HBoxContainer/VBoxContainer/ThrustBarContainer"]
margin_left = 18.0
margin_right = 162.0
margin_bottom = 9.0
rect_min_size = Vector2( 0, 7 )
hint_tooltip = "Max speed (Thrusters)"
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/fg = SubResource( 3 )
max_value = 900.0
value = 400.0
percent_visible = false

[node name="JumpBarContainer" type="HBoxContainer" parent="MarginContainer/MainVBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 39.0
margin_right = 162.0
margin_bottom = 48.0

[node name="JumpBarLabel" type="Label" parent="MarginContainer/MainVBoxContainer/HBoxContainer/VBoxContainer/JumpBarContainer"]
margin_right = 14.0
margin_bottom = 9.0
rect_min_size = Vector2( 14, 0 )
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.0627451, 0.882353, 0, 1 )
text = "J"
align = 1

[node name="JumpBarProgress" type="ProgressBar" parent="MarginContainer/MainVBoxContainer/HBoxContainer/VBoxContainer/JumpBarContainer"]
margin_left = 18.0
margin_right = 162.0
margin_bottom = 9.0
rect_min_size = Vector2( 0, 7 )
hint_tooltip = "Jump range (max)"
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/fg = SubResource( 3 )
value = 50.0
percent_visible = false

[node name="DPSBarContainer" type="HBoxContainer" parent="MarginContainer/MainVBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 162.0
margin_bottom = 61.0

[node name="DPSBarLabel" type="Label" parent="MarginContainer/MainVBoxContainer/HBoxContainer/VBoxContainer/DPSBarContainer"]
margin_right = 14.0
margin_bottom = 9.0
rect_min_size = Vector2( 14, 0 )
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.835294, 0.788235, 0, 1 )
text = "D"
align = 1

[node name="DPSBarProgress" type="ProgressBar" parent="MarginContainer/MainVBoxContainer/HBoxContainer/VBoxContainer/DPSBarContainer"]
margin_left = 18.0
margin_right = 162.0
margin_bottom = 9.0
rect_min_size = Vector2( 0, 7 )
hint_tooltip = "Damage per second (DPS)"
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/fg = SubResource( 3 )
value = 50.0
percent_visible = false

[node name="ShipName" type="Label" parent="MarginContainer/MainVBoxContainer"]
margin_top = 72.0
margin_right = 236.0
margin_bottom = 86.0
text = "Ship Name"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
